--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-scroll": "^1.8.8",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "sweetalert2": "^11.7.18",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
