--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=334694420697-17jlmltkrjc1qo5e69osd1thn7e3uarc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET="GJOIPKkjoazez824289SkjdsKJKDQ54544SDS54454qsds54544554515"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000" || "https://podcast-app-front.vercel.app"
